# Kinetics-FeatureExtractor

./: ActiveLoader.cpp  ActiveLoader.h  CMakeLists.txt  Converter.cpp  Converter.h  CppInterface.cpp  FE_helper.py  FE_helper_file.py  LazyLoader.cpp  LazyLoader.h  PreProcessor.cpp  PreProcessor.h  PyDenseOpFlow.cpp  README  Utils.cpp  Utils.h  evaluator.py  evaluator_framewise.py  extractor.py  extractor_lazy.py
